--- a/checkout.html
+++ b/checkout.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="checkout-header-middle-section">
-          Checkout (<a class="return-to-home-link"
+          Checkout (<a class="return-to-home-link js-return-to-home-link"
             href="amazon.html"></a>)
         </div>
 
@@ -48,7 +48,9 @@
         </div>
 
         <div class="payment-summary js-payment-summary">
-          
+          <a class="return-to-home-link js-return-to-home-link" href="amazon.html">
+        
+          </a>
         </div>
       </div>
     </div>
